# flatpak-filepicker

./: .gitignore  Cargo.toml  LICENSE
flatpak-filepicker/: config.toml  filepicker.gd
flatpak-filepicker/filepicker/: config.ini
src/: lib.rs  main.rs
