[package]
name = "filepicker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
#crate-type = ["bin"]
name = "filepicker"

[lib]
crate-type = ["cdylib"]

[dependencies]
rfd = { version = "0.10.0", default-features = false, features = ["xdg-portal"] }
gdnative = { git = "https://github.com/godot-rust/godot-rust.git" }
