[package]
name = "filepicker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "filepicker-bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.10.1"

[target."cfg(not(unix))".dependencies]
rfd = "0.10.0"

[target."cfg(unix)".dependencies]
rfd = { version = "0.10.0", default-features = false, features = ["xdg-portal"] }
